# ax-agents

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  specs.md
examples/demo/: quarterly_update_ko.txt
src/enterprise_ai_platform/: config.py  dependencies.py  main.py  web_demo.py
src/enterprise_ai_platform/api/: router.py
src/enterprise_ai_platform/core/: a2a.py  agent_context.py  base_agent.py  capability_graph.py  capability_registry.py  event_bus.py  exceptions.py  llm_client.py  orchestrator.py  tool_manager.py
src/enterprise_ai_platform/knowledge/: document_loader.py  embeddings.py  retriever.py  vector_store.py
src/enterprise_ai_platform/mcp/: __init__.py  browser_bridge.py  filesystem_bridge.py
src/enterprise_ai_platform/models/: db.py  domain.py  events.py
src/enterprise_ai_platform/observability/: logger.py  metrics.py  tracer.py
src/enterprise_ai_platform/security/: audit.py  auth.py  rbac.py
src/enterprise_ai_platform/services/: agent_service.py  knowledge_service.py  task_service.py
src/enterprise_ai_platform/tools/: base_tool.py  database_tool.py  file_system_tool.py  http_tool.py  mcp_connector.py
tests/: conftest.py
tests/e2e/: test_workflows.py
tests/integration/: test_api_agents.py  test_task_lifecycle.py
tests/unit/: test_base_agent.py  test_browser_mcp_bridge.py  test_capability_graph.py  test_capability_registry.py  test_filesystem_mcp_bridge.py  test_orchestrator.py
tests/unit/agents/: test_code_generation_agent.py  test_code_refactor_agent.py  test_deep_research_agent.py  (+4 more)
(+34 files in other folders)
